# agents-tutorial

./: .gitignore  ReadMe.md  pyproject.toml
agents_tutorial/agent_scope/: demo.py  game_roles.py  prompt_cn.py  readme.md  utils_cn.py  were_wolf.py
agents_tutorial/auto_gen/: software_development.py
agents_tutorial/llm_demo/: llm_client.py  plan_and_solve.py  react.py  reflection_demo.py
agents_tutorial/transformer_demo/: common_demo.py  deepseek_r1_demo.py  llama4.py  qwen3_demo.py  r1_llama4_qwen35_compare.md
sglang_demo/: demo_sglang_style_rpc.py  process_demo.py  yiled_demo.py  zmq_rpc.py
